2009-01-17  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adele Peterson

        <rdar://problem/6293969>

        Update media controls rendering results for new controls CSS.

        * platform/mac/media/audio-controls-rendering-expected.txt:
        * platform/mac/media/video-controls-rendering-expected.txt:
        * platform/mac/media/video-display-toggle-expected.txt:

2009-01-16  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23397: AXURL is not reported for <INPUT type="image"> elements
        https://bugs.webkit.org/show_bug.cgi?id=23397

        * accessibility/input-image-url-expected.txt: Added.
        * accessibility/input-image-url.html: Added.

2009-01-16  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23393: TextField has AXTitle and AXTitleUIElement
        https://bugs.webkit.org/show_bug.cgi?id=23393

        * accessibility/double-title-expected.txt: Added.
        * accessibility/double-title.html: Added.

2009-01-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Alexey Proskuryakov.

        Add toggle-styles test for editing.
        https://bugs.webkit.org/show_bug.cgi?id=23366

        This test demonstrates at least these 3 editing bugs:
        https://bugs.webkit.org/show_bug.cgi?id=17733
        https://bugs.webkit.org/show_bug.cgi?id=20215
        https://bugs.webkit.org/show_bug.cgi?id=22810

        * editing/execCommand/resources/toggle-styles.js: Added.
        * editing/execCommand/toggle-styles-expected.txt: Added.
        * editing/execCommand/toggle-styles.html: Added.

2009-01-16  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.
        
        Added tests for <rdar://problem/6452301> REGRESSION: Latest WebKit
        nightlies turn "c" into "" when stripping \\c_ character

        * fast/regex/malformed-escapes-expected.txt:
        * fast/regex/resources/malformed-escapes.js:
